# BERN

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py
.github/workflows/: wheel.yml
BERNdata/: DATA-LICENCE.md  comm_has_climate.tsv  comm_has_exposition.tsv  comm_has_humus_type  comm_has_humus_type.tsv  communities.tsv  community_niche.tsv  community_regions.tsv  community_soil.tsv  link_plantspecies_to_community.tsv  plant-species.tsv  site_type.tsv  sources.tsv  species_ellenberg.tsv  species_synonym.tsv
BERNpp/: BERNpp.cpp  Community.cpp  Community.h  DataAccess.cpp  DataAccess.h  Site.h  SiteVector.cpp  SiteVector.h  Species.h  bern.i  species.cpp
examples/: how_does_bern_work.ipynb
